--- a/trunk/Photify_alpha/res/values/strings.xml
+++ b/trunk/Photify_alpha/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
 
+    <!-- Facebook -->
+    <string name="facebook_app_id">1433071126925017</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="share">Share</string>
+    <string name="googlemap_apikey">AIzaSyAe7NeBpjZYoW8gnN8V3NwVH5LGJzozsk0</string>
+
 </resources>
