--- a/Photify_alpha/res/values/strings.xml
+++ b/Photify_alpha/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="share">Share</string>
+    
+    <!-- GoogleMap -->
     <string name="googlemap_apikey">AIzaSyAe7NeBpjZYoW8gnN8V3NwVH5LGJzozsk0</string>
 
 </resources>
